[package]
name = "denshi"
version = "0.1.0"
authors = ["André Twupack <atwupack@mailbox.org>"]
edition = "2018"

[dependencies]
#web-view = { version="0.6.2", features=["edge"]}
web-view = { version="0.6.2"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }

