[package]
name = "denshi"
description = "A small UI library using web-view and Metro 4."
readme = "README.md"
version = "0.1.0"
authors = ["André Twupack <atwupack@mailbox.org>"]
edition = "2018"

[badges]
travis-ci = { repository = "atwupack/denshi", branch = "master" }

[features]
use-local-server = ["tiny_http", "port_check"]
use-edge = ["web-view/edge"]

[dependencies]
web-view = { version = "0.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tiny_http = { version = "0.7", optional = true }
# nanoid = "0.3"
# log = "0.4"
port_check = { version = "0.1", optional = true }

[dev-dependencies]
systemstat = "0.1"